# FitterGBS

./: .gitignore  CMakeLists.txt  LinkDef.h  README.md  main.cpp
include/: TUserInterface.hpp
src/: TUserInterface.cpp
